--- a/deployment/docker-compose.dev.yml
+++ b/deployment/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile.dev
-    container_name: teste_edoo_backend_dev
+    container_name: benefit_flow_api_dev
     ports:
       - "3000:3000"
     environment:
